src/main/java/com/example/customerservice/error/CustomErrorResponse.java
package com.example.customerservice.error;

public class CustomErrorResponse {

	private int status;
	private String error;
	private String detail;

	public int getStatus() {
		return status;
	}

	public void setStatus(int status) {
		this.status = status;
	}

	public String getError() {
		return error;
	}

	public void setError(String error) {
		this.error = error;
	}

	public String getDetail() {
		return detail;
	}

	public void setDetail(String detail) {
		this.detail = detail;
	}

}
